manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: wikis
  name: wikijs-comercial
  labels:
    app: wikijs-comercial
spec:
  selector:
    app: wikijs-comercial
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
